src/objects/Alliance_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Alliance_Contact_Role__c</fullName>
        <label>Alliance Contact Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Turbo Champion</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
                <value>
                    <fullName>Technical User</fullName>
                </value>
                <value>
                    <fullName>Cisco Product Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>Cisco Consulting Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Cisco Account Manager</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner Technical Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alliance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alliance Contact Roles</relationshipLabel>
        <relationshipName>Alliance_Contact_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Alliance_Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alliance Contact Roles</relationshipLabel>
        <relationshipName>Alliance_Contact_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Alliance Contact Role</label>
    <nameField>
        <displayFormat>ACR{00000}</displayFormat>
        <label>Alliance Contact Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>